[package]
name = "pumpfun-sniper"
version = "0.1.0"
edition = "2021"
default-run = "pumpfun-sniper"

[features]
bin = []

[[bin]]
name = "test_token_logs"
path = "src/bin/test_token_logs.rs"

[[bin]]
name = "simple_extract_tokens"
path = "src/bin/simple_extract_tokens.rs"

[[bin]]
name = "test_token_detection"
path = "src/bin/test_token_detection.rs"

[dependencies]
tokio = { version = "1.36", features = ["full", "macros"] }
tokio-macros = "2.3"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.21"
bs58 = "0.5"
hex = "0.4"
solana-program = "=1.16.25"
lazy_static = "1.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
rustc-hash = "1.1"
solana-sdk = "=1.16.25"
solana-client = "=1.16.25"
regex = "1.10"
rusqlite = { version = "0.33.0", features = ["bundled"] }
thiserror = "2.0.11"
rand = "=0.7.3"
rand_core = "=0.5.1"
rand_chacha = "=0.2.2"
uuid = { version = "1.3", features = ["v4"] }
sha2 = "0.10"
bincode = "1.3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.31", features = ["derive"] }
http = "1.2.0"

# Fix for ark-bn254 compile error - using older, more stable versions
[dependencies.ark-ff]
version = "=0.3.0"
features = ["std"]

[dependencies.ark-ec]
version = "=0.3.0"
features = ["std"]

[dependencies.ark-bn254]
version = "=0.3.0" 
features = ["std"]

[dependencies.ark-serialize]
version = "=0.3.0"
features = ["std"]

[dependencies.ark-std]
version = "=0.3.0"
features = ["std"]
